Added env var for db connection to ci config adapted db options to tests added ci config to cargo exclusions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ authors = [
 edition = "2018"
 description = "A simple lightweight object-document mapper for ArangoDB"
 keywords = ["ArangoDB", "Arango"]
+exclude =  ["examples", "tests", ".gitlab-ci.yml"]
 categories = ["web-programming", "database"]
-exclude =  ["examples", "tests"]
 license-file = "LICENSE"
 readme = "README.md"
 repository = "https://gitlab.com/qonfucius/aragog"
