--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,25 +2,32 @@
 name = "aragog"
 version = "0.1.0"
 authors = [
-    "Felix de Maneville: <felix.maneville@gmail.com>, <felix.maneville@qonfucius.team>",
-    "Qonfucius <https://qonfucius.com>"
+    "Felix de Maneville: <felix.maneville@gmail.com>",
+    "Qonfucius team <felix.maneville@qonfucius.team>"
 ]
 edition = "2018"
 description = "A simple lightweight object-document mapper for ArangoDB"
 keywords = ["ArangoDB", "Arango"]
-categories = ["web-programming"]
-exclude =  ["examples", "tests"]
+exclude =  ["examples", "tests", ".gitlab-ci.yml"]
+categories = ["web-programming", "database"]
 license-file = "LICENSE"
 readme = "README.md"
 repository = "https://gitlab.com/qonfucius/aragog"
+documentation = "https://docs.rs/aragog"
 
 [dependencies]
+# ArangoDB driver
 arangors = "0.4.3"
+# Used for string validation toolbox, not used otherwise
 regex = "1.3.9"
+# Record trait has async methods
 async-trait = "0.1.36"
+# Serialization and deserialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+# Log handling
 log = "0.4.11"
+# Error definitions
 thiserror = "1.0.20"
 
 [dev-dependencies]
