Added new actix_http_error feature to allow actx-web dependency and implement its error on ServiceError Renamed AragogServiceError ServiceError Updated ci config and readme

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,7 @@ cache:
     - target/
     - cargo/
 
-# Use cargo to test the project
-test:cargo:
+.test_template: &test_template
   image: rust:latest
   variables:
     ARANGO_ROOT_PASSWORD: "test"
@@ -17,9 +16,17 @@ test:cargo:
     DB_PWD: "test"
   services:
     - "arangodb:latest"
+  stage: test
+
+test:default:
+  <<: *test_template
   script:
-    # setup environment variables
     - cargo test -- --test-threads=1
+
+test:actix_http_error:
+  <<: *test_template
+  script:
+    - cargo test --features "actix_http_error" -- --test-threads=1
 
 pages:
   image: rust:latest
