--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ documentation = "https://docs.rs/aragog"
 [features]
 default = [ ]
 actix_http_error = ["actix-web"]
+password_hashing = ["argonautica"]
 
 [dependencies]
 # ArangoDB driver
@@ -35,6 +36,7 @@ log = "0.4.11"
 thiserror = "1.0.20"
 
 actix-web = { version = "2.0.0", optional = true }
+argonautica = { version = "0.2.0", optional = true }
 
 [dev-dependencies]
 tokio-test = "0.2.1"
