--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,19 +44,19 @@ test:default:
   image: rust:latest
   <<: *test_template
   script:
-    - cargo test -- --test-threads=1
+    - cargo test -- --test-threads=1 # Will run doctests
 
 test:actix_http_error:
   image: rust:latest
   <<: *test_template
   script:
-    - cargo test --features "actix_http_error" -- --test-threads=1
+    - cargo test --features "actix_http_error" --all-targets -- --test-threads=1
 
 test:password_hashing:
   image: $CONTAINER_CUSTOM_REGISTRY/rust-clang-alpine:latest
   <<: *test_template
   script:
-    - cargo test --features "password_hashing" -- --test-threads=1
+    - cargo test --features "password_hashing" --all-targets -- --test-threads=1
 
 rustdoc:
   <<: *cache_pull_template
