--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,27 +22,26 @@ password_hashing = ["argonautica"]
 
 [dependencies]
 # ArangoDB driver
-arangors = "0.4.3"
+arangors = "^0.4"
 # Used for string validation toolbox, not used otherwise
-regex = "1.3.9"
+regex = "^1.3"
 # Record trait has async methods
-async-trait = "0.1.36"
+async-trait = "^0.1"
 # Serialization and deserialization
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
 # Log handling
-log = "0.4.11"
+log = "^0.4"
 # Error definitions
-thiserror = "1.0.20"
+thiserror = "^1.0"
 # Numeric types
-num = "0.3.0"
+num = "^0.3"
 
-
-actix-web = { version = "2.0.0", optional = true }
-argonautica = { version = "0.2.0", optional = true }
+actix-web = { version = "^3.0", optional = true }
+argonautica = { version = "^0.2", optional = true }
 
 [dev-dependencies]
-tokio-test = "0.2.1"
-tokio = {version = "0.2.22", features = ["rt-threaded", "macros"]}
+tokio-test = "^0.2"
+tokio = {version = "^0.2", features = ["rt-threaded", "macros"]}
 # We add the "feature" option to avoid serde version conflict somehow
-chrono = { version = "0.4.13", features = ["serde"] }
+chrono = { version = "^0.4", features = ["serde"] }
