--- a/aragog_macros/Cargo.toml
+++ b/aragog_macros/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "aragog-macros"
 version = "0.1.0"
-authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
+authors = [
+    "Felix de Maneville: <felix.maneville@gmail.com>",
+    "Qonfucius team <felix.maneville@qonfucius.team>"
+]
 edition = "2018"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
