Added EdgeRecord trait Added EdgeRecord derive macro with atribute checking Implemented NamedGraph traversal queries Implemented `ANY` traversal direction Implemented `PRUNE` AQL operation

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .idea/
 /target/
 aragog_macros/target/
+aragog_macros/data_struct_example
 examples/simple_app/target/
 examples/graph_example/target/
 
