--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aragog"
-version = "0.6.0"
+version = "0.6.1"
 authors = [
     "Felix de Maneville: <felix.maneville@gmail.com>",
     "Qonfucius team <felix.maneville@qonfucius.team>"
@@ -23,29 +23,32 @@ password_hashing = ["argonautica"]
 
 [dependencies]
 # ArangoDB driver
-arangors = "^0.4"
+arangors = "0.4.4"
 # Used for string validation toolbox, not used otherwise
-regex = "^1.3"
+regex = "1.4.2"
 # Record trait has async methods
-async-trait = "^0.1"
+async-trait = "0.1.42"
 # Serialization and deserialization
-serde = { version = "^1.0", features = ["derive"] }
-serde_json = "^1.0"
+serde = { version = "1.0.117", features = ["derive"] }
+serde_json = "1.0.59"
 # Log handling
-log = "^0.4"
+log = "0.4.11"
 # Error definitions
-thiserror = "^1.0"
+thiserror = "1.0.22"
 # Numeric types
-num = "^0.3"
+num = "0.3.1"
 # Self depedencies
 aragog-macros = { path = "aragog_macros" }
 
-paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", branch = "master", optional = true, features = ["actix"] }
-actix-web = { version = "^3.1", optional = true, default-features = false }
-argonautica = { version = "^0.2", optional = true }
+paperclip = { version = "0.5.0", optional = true, features = ["actix"] }
+actix-web = { version = "3.2.0", optional = true, default-features = false }
+argonautica = { version = "0.2.0", optional = true }
+
+[patch.crates-io]
+paperclip = { git = "https://github.com/wafflespeanut/paperclip", branch = "master" }
 
 [dev-dependencies]
-tokio-test = "^0.2"
-tokio = {version = "^0.2", features = ["rt-threaded", "macros"]}
+tokio-test = "0.2.1"
+tokio = {version = "0.2.23", features = ["macros"]}
 # We add the "feature" option to avoid serde version conflict somehow
-chrono = { version = "^0.4", features = ["serde"] }
+chrono = { version = "0.4.19", features = ["serde"] }
