--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ thiserror = "1.0.22"
 # Numeric types
 num = "0.3.1"
 # Self depedencies
-aragog-macros = { path = "aragog_macros" }
+aragog-macros = { path = "aragog_macros", version = "0.1.0" }
 
 actix-web = { version = "3.2.0", optional = true, default-features = false }
 argonautica = { version = "0.2.0", optional = true }
