--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = [
 edition = "2018"
 description = "A simple lightweight object-document mapper for ArangoDB"
 keywords = ["ArangoDB", "Arango", "ORM", "ODM", "OGM"]
-exclude =  ["tests", ".gitlab-ci.yml"]
+exclude =  ["tests", ".gitlab-ci.yml", ".gitignore"]
 categories = ["web-programming", "database"]
 license = "MIT"
 readme = "README.md"
@@ -40,7 +40,7 @@ num = "0.3.1"
 # Self depedencies
 aragog-macros = { path = "aragog_macros", version = "0.1.0" }
 
-actix-web = { version = "3.2.0", optional = true, default-features = false }
+actix-web = { version = "3.3.0", optional = true, default-features = false }
 argonautica = { version = "0.2.0", optional = true }
 paperclip = { git = "https://github.com/wafflespeanut/paperclip", branch = "master", optional = true, features = ["actix"] }
 
