--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ password_hashing = ["argonautica"]
 
 [dependencies]
 # ArangoDB driver
-arangors = "0.4.4"
+arangors = "0.4.5"
 # Used for string validation toolbox, not used otherwise
 regex = "1.4.2"
 # Record trait has async methods
@@ -40,9 +40,9 @@ num = "0.3.1"
 # Self depedencies
 aragog-macros = { path = "aragog_macros", version = "0.1.0" }
 
-actix-web = { version = "3.3.0", optional = true, default-features = false }
+actix-web = { version = "3.3.1", optional = true, default-features = false }
 argonautica = { version = "0.2.0", optional = true }
-paperclip = { git = "https://github.com/wafflespeanut/paperclip", branch = "master", optional = true, features = ["actix"] }
+paperclip = { version = "0.5", optional = true, features = ["actix"] }
 
 [dev-dependencies]
 tokio-test = "0.2.1"
