--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,12 @@ actix-web = { version = "3.3.1", optional = true, default-features = false }
 argonautica = { version = "0.2.0", optional = true }
 paperclip = { version = "0.5", optional = true, features = ["actix"] }
 
+[workspace]
+members = [
+    ".",
+    "aragog_macros",
+]
+
 [dev-dependencies]
 tokio-test = "0.2.1"
 tokio = {version = "0.2.23", features = ["macros"]}
