--- a/aragog_macros/Cargo.toml
+++ b/aragog_macros/Cargo.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 edition = "2018"
 license = "MIT"
+description = "Macros for Aragog Crate"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
