--- a/aragog_cli/Cargo.toml
+++ b/aragog_cli/Cargo.toml
@@ -10,6 +10,8 @@ license = "MIT"
 description = "CLI for Aragog Crate"
 exclude= ["./example"]
 categories = ["web-programming", "database"]
+repository = "https://gitlab.com/qonfucius/aragog/aragog_cli"
+readme = "README.md"
 
 [[bin]]
 name = "aragog"
