Index has no unicity issue and fixed the id problem

--- a/aragog_cli/example/migrations/1607336998119_new_graph.yaml
+++ b/aragog_cli/example/migrations/1607336998119_new_graph.yaml
@@ -21,6 +21,7 @@ up:
           to: ["MyCollection2"]
 down:
   - delete_index:
+      collection: MyCollection2
       name: Expiration
   - delete_graph:
       name: Graph
