--- a/aragog_macros/Cargo.toml
+++ b/aragog_macros/Cargo.toml
@@ -8,6 +8,7 @@ authors = [
 edition = "2018"
 license = "MIT"
 description = "Macros for Aragog Crate"
+repository = "https://gitlab.com/qonfucius/aragog/-/tree/master/aragog_macros"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
