--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,7 @@ test:password_hashing:
 #   image: $CONTAINER_CUSTOM_REGISTRY/rust-clang-alpine:latest
 #   <<: *test_template
 #   script:
-#     - cargo test --features "blocking" --no-default-features --tests --
+#     - cargo test --features "blocking derive" --no-default-features --tests --
 
 test:packages:
   image: rust:latest
