--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 variables:
   CARGO_HOME: $CI_PROJECT_DIR/.cargo
-  CONTAINER_CUSTOM_REGISTRY: registry.gitlab.com/qonfucius/infrastructure/docker-images
+  CONTAINER_CUSTOM_REGISTRY: registry.gitlab.com/qonfucius/infrastructure/images/rust/common-dev-libraries
   RUSTFLAGS: -Ctarget-feature=-crt-static
+  RUST_BACKTRACE: 1
 
 stages:
   - build
@@ -21,7 +22,7 @@ cache: &cache_template
     policy: pull
 
 build:
-  image: $CONTAINER_CUSTOM_REGISTRY/rust-clang-alpine:latest
+  image: $CONTAINER_CUSTOM_REGISTRY:alpine
   stage: build
   script:
     - cargo build
@@ -31,18 +32,21 @@ build:
 .test_template: &test_template
   <<: *cache_pull_template
   variables:
-    ARANGO_ROOT_PASSWORD: "test"
-    DB_HOST: "http://arangodb:8529"
-    DB_NAME: "_system"
-    DB_USER: "root"
-    DB_PASSWORD: "test"
-    SCHEMA_PATH: "tests/schema.yaml"
+    ARANGO_ROOT_PASSWORD: test
+    DB_HOST: http://arangodb:8529
+    DB_NAME: _system
+    DB_USER: root
+    DB_PASSWORD: test
+    SCHEMA_PATH: tests/schema.yaml
   services:
-    - "arangodb:latest"
+    - arangodb:latest
   stage: test
+  before_script:
+    - rustup show
+    - cargo -V
 
 test:default:
-  image: rust:latest
+  image: $CONTAINER_CUSTOM_REGISTRY:alpine
   <<: *test_template
   script:
     - cargo test --tests -- --test-threads=1
@@ -54,31 +58,37 @@ test:doc:
     - cargo test --doc -- --test-threads=1
 
 test:actix:
-  image: rust:latest
+  image: $CONTAINER_CUSTOM_REGISTRY:alpine
   <<: *test_template
   script:
     - cargo test --features "actix" --tests -- --test-threads=1
 
 test:password_hashing:
-  image: $CONTAINER_CUSTOM_REGISTRY/rust-clang-alpine:latest
+  image: $CONTAINER_CUSTOM_REGISTRY:alpine
   <<: *test_template
   script:
     - cargo test --features "password_hashing" --tests -- --test-threads=1
 
 test:blocking:
-  image: $CONTAINER_CUSTOM_REGISTRY/rust-clang-alpine:latest
+  image: $CONTAINER_CUSTOM_REGISTRY:alpine
   <<: *test_template
   script:
     - cargo test --features "blocking derive" --no-default-features --tests -- --test-threads=1
 
+test:minimal_traits:
+  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  <<: *test_template
+  script:
+    - cargo test --features "minimal_traits" --tests -- --test-threads=1
+
 test:packages:
-  image: rust:latest
+  image: $CONTAINER_CUSTOM_REGISTRY:alpine
   <<: *test_template
   script:
     - cargo test --package aragog_cli --no-default-features
 
 test:examples:
-  image: $CONTAINER_CUSTOM_REGISTRY/rust-clang-alpine:latest
+  image: $CONTAINER_CUSTOM_REGISTRY:alpine
   <<: *test_template
   script:
     - cargo run --example simple_example
@@ -86,15 +96,15 @@ test:examples:
 
 test::rustfmt:
   <<: *cache_pull_template
-  image: $CONTAINER_CUSTOM_REGISTRY/rust-clang-alpine:latest
+  image: $CONTAINER_CUSTOM_REGISTRY:alpine
   stage: test
   script:
     - rustup component add rustfmt
     - cargo fmt --all -- --check
 
-rustdoc:
+pages:
   <<: *cache_pull_template
-  image: $CONTAINER_CUSTOM_REGISTRY/rust-clang-alpine:latest
+  image: $CONTAINER_CUSTOM_REGISTRY:alpine
   stage: documentation
   variables:
     PKG_NAME: aragog
