Arangors 0.4.6 Migration Config dislay Arago CLI describe command

--- a/aragog_cli/example/migrations/1607336998119_new_graph.yaml
+++ b/aragog_cli/example/migrations/1607336998119_new_graph.yaml
@@ -19,6 +19,11 @@ up:
         - collection: MyEdgeCollection
           from: ["MyCollection"]
           to: ["MyCollection2"]
+      is_smart: false
+      is_disjoint: true
+      options:
+        numberOfShards: 10
+        writeConcern: 2
 down:
   - delete_index:
       collection: MyCollection2
