--- a/aragog_cli/Cargo.toml
+++ b/aragog_cli/Cargo.toml
@@ -21,13 +21,14 @@ doc = false
 [dependencies]
 # Aragog
 aragog = { path = "..", version = "0.7", features = ["blocking"], default-features = false }
-arangors = { version = "0.4.5", features = ["blocking"], default-features = false }
+arangors = { version = "0.4", features = ["blocking"], default-features = false }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
-
+# Describe output
+prettytable-rs = "0.8"
 # Log
 log = "0.4"
 
