--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 variables:
   CARGO_HOME: $CI_PROJECT_DIR/.cargo
-  CONTAINER_CUSTOM_REGISTRY: registry.gitlab.com/qonfucius/infrastructure/images/rust/common-dev-libraries
   RUSTFLAGS: -Ctarget-feature=-crt-static
   RUST_BACKTRACE: 1
 
@@ -22,7 +21,7 @@ cache: &cache_template
     policy: pull
 
 build:
-  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  image: rust:latest
   stage: build
   script:
     - cargo build
@@ -45,8 +44,13 @@ build:
     - rustup show
     - cargo -V
 
+.clang_template: &clang_template
+  before_script:
+    - apt update
+    - apt install -yq clang
+
 test:default:
-  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  image: rust:latest
   <<: *test_template
   script:
     - cargo test --tests -- --test-threads=1
@@ -58,37 +62,38 @@ test:doc:
     - cargo test --doc -- --test-threads=1
 
 test:actix:
-  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  image: rust:latest
   <<: *test_template
   script:
     - cargo test --features "actix" --tests -- --test-threads=1
 
 test:password_hashing:
-  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  image: rust:latest
   <<: *test_template
+  <<: *clang_template
   script:
     - cargo test --features "password_hashing" --tests -- --test-threads=1
 
 test:blocking:
-  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  image: rust:latest
   <<: *test_template
   script:
     - cargo test --features "blocking derive" --no-default-features --tests -- --test-threads=1
 
 test:minimal_traits:
-  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  image: rust:latest
   <<: *test_template
   script:
     - cargo test --features "minimal_traits" --tests -- --test-threads=1
 
 test:packages:
-  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  image: rust:latest
   <<: *test_template
   script:
     - cargo test --package aragog_cli --no-default-features
 
 test:examples:
-  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  image: rust:latest
   <<: *test_template
   script:
     - cargo run --example simple_example
@@ -96,7 +101,7 @@ test:examples:
 
 test::rustfmt:
   <<: *cache_pull_template
-  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  image: rust:latest
   stage: test
   script:
     - rustup component add rustfmt
@@ -104,7 +109,8 @@ test::rustfmt:
 
 pages:
   <<: *cache_pull_template
-  image: $CONTAINER_CUSTOM_REGISTRY:alpine
+  <<: *clang_template
+  image: rust:latest
   stage: documentation
   variables:
     PKG_NAME: aragog
