--- a/aragog_cli/example/migrations/1607086438694_test_mig.yaml
+++ b/aragog_cli/example/migrations/1607086438694_test_mig.yaml
@@ -6,6 +6,7 @@
 up:
   - create_collection:
       name: MyCollection
+      wait_for_sync: true
 down:
   - delete_collection:
       name: MyCollection
