--- a/aragog_cli/example/migrations/1607086441088_test_mig2.yaml
+++ b/aragog_cli/example/migrations/1607086441088_test_mig2.yaml
@@ -8,6 +8,7 @@ up:
       name: MyCollection2
   - create_edge_collection:
       name: MyEdgeCollection
+      wait_for_sync: false
 down:
   - delete_collection:
       name: MyCollection2
