Book and Validate Proc macros attributes

--- a/aragog_macros/Cargo.toml
+++ b/aragog_macros/Cargo.toml
@@ -15,6 +15,7 @@ repository = "https://gitlab.com/qonfucius/aragog/-/tree/master/aragog_macros"
 proc-macro = true
 
 [dependencies]
-syn = "^1.0"
-quote = "^1.0"
-proc-macro-error = "^1.0"
+syn = "1.0"
+quote = "1.0"
+proc-macro-error = "1.0"
+proc-macro2 = "1.0"
