Excluded book from package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = [
 edition = "2018"
 description = "A simple lightweight object-document mapper for ArangoDB"
 keywords = ["ArangoDB", "Arango", "ORM", "ODM", "OGM"]
-exclude =  ["tests", ".gitlab-ci.yml", ".gitignore", "examples"]
+exclude =  ["tests", ".gitlab-ci.yml", ".gitignore", "examples", "book"]
 categories = ["web-programming", "database"]
 license = "MIT"
 readme = "README.md"
