Added crates.io status badge, added forbidden unsafe badge

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,9 @@ env_logger = "0.8"
 version = "0.2"
 features = [ "macros", "rt-core" ]
 
+[badges]
+maintenance = { status = "actively-developed" }
+
 [workspace]
 members = [
     "aragog_cli"
